crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_offset_pagination_client.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.client
---
# Generated by Phoenix Gen — do not edit manually.

from typing import Any

import httpx

from .models import ListPostsPage


class ApiClient:
    def __init__(self, base_url: str) -> None:
        self.base_url = base_url
        self.client = httpx.AsyncClient()

    async def list_posts(self, *, page: int, limit: int) -> ListPostsPage:
        params: dict[str, Any] = {}
        if page is not None:
            params["page"] = page
        if limit is not None:
            params["limit"] = limit
        response = await self.client.get(f"{self.base_url}/api/posts", params=params)
        response.raise_for_status()
        return ListPostsPage.model_validate(response.json())
