crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_offset_pagination_handlers.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.handlers
---
# Generated by Phoenix Gen — implement the handler methods below.

from typing import Protocol

from .models import ListPostsPage


class Handlers(Protocol):
    async def list_posts(self, *, page: int, limit: int) -> ListPostsPage: ...
