crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_offset_pagination_models.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.models
---
# Generated by Phoenix Gen — do not edit manually.

from __future__ import annotations

from pydantic import BaseModel


class Post(BaseModel):
    id: int
    title: str


class ListPostsPage(BaseModel):
    items: list[Post]
    total_count: int
