crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_offset_pagination_server.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from fastapi import APIRouter

from .handlers import Handlers
from .models import ListPostsPage


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.get("/api/posts")
    async def list_posts(page: int, limit: int) -> ListPostsPage:
        return await handlers.list_posts(page=page, limit=limit)

    return router
