crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_partial_models.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.models
---
# Generated by Phoenix Gen — do not edit manually.

from __future__ import annotations

from pydantic import BaseModel, Field


class User(BaseModel):
    id: int
    name: str = Field(..., min_length=1)
    age: int = Field(..., ge=0)


class UpdateUserBody(BaseModel):
    name: str | None = Field(None, min_length=1)
    age: int | None = Field(None, ge=0)
