crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_pick_client.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.client
---
# Generated by Phoenix Gen — do not edit manually.

import httpx

from .models import UpdateEmailBody, User


class ApiClient:
    def __init__(self, base_url: str) -> None:
        self.base_url = base_url
        self.client = httpx.AsyncClient()

    async def update_email(self, id: str, body: UpdateEmailBody) -> User:
        response = await self.client.patch(
            f"{self.base_url}/api/users/{id}", json=body.model_dump(by_alias=True)
        )
        response.raise_for_status()
        return User(**response.json())
