crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_post_client.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.client
---
# Generated by Phoenix Gen — do not edit manually.

import httpx

from .models import CreateUserBody, User


class ApiClient:
    def __init__(self, base_url: str) -> None:
        self.base_url = base_url
        self.client = httpx.AsyncClient()

    async def create_user(self, body: CreateUserBody) -> User:
        response = await self.client.post(
            f"{self.base_url}/api/users", json=body.model_dump()
        )
        response.raise_for_status()
        return User(**response.json())
