crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_post_models.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.models
---
# Generated by Phoenix Gen — do not edit manually.

from __future__ import annotations

from pydantic import BaseModel


class User(BaseModel):
    id: int
    name: str
    email: str


class CreateUserBody(BaseModel):
    name: str
    email: str
