crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_post_server.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from fastapi import APIRouter, HTTPException

from .handlers import Handlers
from .models import CreateUserBody, User


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.post("/api/users")
    async def create_user(body: CreateUserBody) -> User:
        try:
            return await handlers.create_user(body=body)
        except Exception as e:
            if str(e) == "Conflict":
                raise HTTPException(status_code=409, detail="Conflict") from e
            raise

    return router
