crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_put_server.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from fastapi import APIRouter

from .handlers import Handlers
from .models import ReplaceUserBody, User


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.put("/api/users/{id}")
    async def replace_user(id: str, body: ReplaceUserBody) -> User:
        return await handlers.replace_user(id=id, body=body)

    return router
