crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_query_client.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.client
---
# Generated by Phoenix Gen — do not edit manually.

from typing import Any

import httpx

from .models import User


class ApiClient:
    def __init__(self, base_url: str) -> None:
        self.base_url = base_url
        self.client = httpx.AsyncClient()

    async def list_users(
        self,
        *,
        page: int = 1,
        limit: int = 20,
        search: str | None = None,
    ) -> list[User]:
        params: dict[str, Any] = {}
        if page is not None:
            params["page"] = page
        if limit is not None:
            params["limit"] = limit
        if search is not None:
            params["search"] = search
        response = await self.client.get(f"{self.base_url}/api/users", params=params)
        response.raise_for_status()
        return [User(**item) for item in response.json()]
